--- a/题解.md
+++ b/题解.md
@@ -1,9 +1,3 @@
-
-
-
-
-
-
 ## 一. 数学题/递归
 
 6 Z字形变换
@@ -80,6 +74,12 @@ LCP18 早餐组合
 
 47 全排列II
 
+73 矩阵置0
+
+342 4的幂
+
+525 连续数组
+
 ## 二. 树/链表
 
 2 两数相
@@ -115,6 +115,15 @@ LCP18 早餐组合
 637 二叉树的层平均值
 
 226 翻转二叉树
+
+面试题 04.06 后继者
+
+1744 你能在你最喜欢的那天吃到你最喜欢的糖果吗？
+
+523 连续的子数组和
+
+203 移除链表元素
+
 
 ## 三. 动态规划
 
@@ -8289,5 +8298,396 @@ class Solution {
     }
 }       
 
+```
+
+### 73 矩阵置0
+
+难点主要在于使用常数空间，需要在第一行设置一个rowFlag，因为我们要把需要置为0的列放在首行上，而如果首行本身就包含0，则会出错。
+
+时间复杂度：O(mn)
+
+空间复杂度：O(1)
+
+```java
+class Solution {
+    public void setZeroes(int[][] matrix) {
+        int m = matrix.length;
+        int n = matrix[0].length;
+        int rowFlag = 0;
+        for (int j = 0; j < n; j++) {
+            if (matrix[0][j] == 0) {
+                rowFlag = 1;
+            }
+        }
+        for (int i = 1; i < m; i++) {
+            int flag = 0;
+            for (int j = 0; j < n; j++) {
+                if (matrix[i][j] == 0) {
+                    flag = 1;
+                    matrix[0][j] = 0;
+                }
+
+            }
+            if (flag == 1) {
+                for (int j = 0; j < n; j++) {
+                    matrix[i][j] = 0;
+                }
+            }
+        }
+        for (int j = 0; j < n; j++) {
+            if (matrix[0][j] == 0) {
+                for (int i = 0; i < m; i++) {
+                    matrix[i][j] = 0;
+                }
+            }
+        }
+        if (rowFlag == 1) {
+            for (int j = 0; j < n; j++) {
+                matrix[0][j] = 0;
+            }
+        }
+
+
+    }
+}
+```
+
+### 342 4的幂
+
+```java
+class Solution {
+    public boolean isPowerOfFour(int n) {
+        while (n > 0) {
+            if (n % 4 != 0) {
+                return false;
+            } else {
+                n = n / 4;
+            }
+        }
+        return true;
+    }
+}
+```
+
+### 面试题 04.06 后继者
+
+微软面试现场让写的一道题，当时没有写完。。。
+
+方法一：比较ugly
+
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode(int x) { val = x; }
+ * }
+ */
+
+class Solution {
+
+    public TreeNode findLeftMost(TreeNode p) {
+        while (p.left != null) {
+            p = p.left;
+        }
+        return p;
+    }
+
+    public TreeNode findParent(TreeNode root, TreeNode p) {
+        if (p == root) return null;
+        TreeNode curr = root;
+        TreeNode parent = null;
+        while (curr != null){
+            if (curr.val < p.val) {
+                // parent = curr;
+                curr = curr.right;
+            } else if (curr.val > p.val) {
+                
+                parent = curr;
+                curr = curr.left;
+            } else {
+                break;
+            }
+        }
+        return parent;
+    }
+
+    public TreeNode inorderSuccessor(TreeNode root, TreeNode p) {
+        if (p.right == null) {
+            TreeNode parent = findParent(root, p);
+
+            return parent;
+        }
+
+        return findLeftMost(p.right);
+    }
+
+
+}
+
+```
+
+方法二：更加清晰
+
+```java
+class Solution {
+
+
+    public TreeNode inorderSuccessor(TreeNode root, TreeNode p) {
+        if (root == null) {
+            return root;
+        }
+
+        if (p.val >= root.val) {
+            return inorderSuccessor(root.right, p);
+        }
+
+        TreeNode node = inorderSuccessor(root.left, p);
+        return  node == null?root: node;
+    }
+
+
+}
+
+```
+
+1744 你能在你最喜欢的那天吃到你最喜欢的糖果吗？
+
+答：前缀和。问题很复杂很长，但本质在于看每天如果吃一颗糖和吃max的糖，在第favorDay吃到的是第几类糖。如果favorCandy在这中间，说明一定可以吃到。
+
+时间复杂度：O(m+n)
+空间复杂度：O(m)
+
+```java
+class Solution {
+
+    public boolean[] canEat(int[] candiesCount, int[][] queries) {
+        int num_c = candiesCount.length;
+        int num_q = queries.length;
+        boolean[] ans = new boolean[num_q];
+        // 计算前缀和
+        long[] prefixSum = new long[num_c];
+        prefixSum[0] = candiesCount[0];
+        for (int i = 1; i < num_c; i++) {
+            // candiesCount[i] += candiesCount[i-1];
+            prefixSum[i] = prefixSum[i-1] + candiesCount[i];
+        }
+        
+        for (int i = 0; i < num_q; i++) {
+            int a = queries[i][0];
+            int b = queries[i][1];
+            int c = queries[i][2];
+
+            int min_eat = 1 * (b+1);
+
+            if (min_eat <= prefixSum[a]) {
+                if (a > 0 && (prefixSum[a-1] / c >= (b+1))) {
+                    ans[i] = false;
+                } else {
+                    ans[i] = true;
+                }
+                
+            } else{
+                ans[i] = false;
+            }
+
+        }
+        return ans;
+    }
+}
+
+```
+
+160 相交链表
+
+方法一：
+
+答：用hashmap存headA节点
+
+时间复杂度：O(n)
+
+空间复杂度：O(n)
+
+方法二：
+
+存在时间复杂度为O(n)，空间复杂度为O(1)的解法
+
+
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode(int x) {
+ *         val = x;
+ *         next = null;
+ *     }
+ * }
+ */
+public class Solution {
+    public ListNode getIntersectionNode(ListNode headA, ListNode headB) {
+        HashMap<ListNode, Integer> map = new HashMap<>();
+        
+        ListNode curr = headA;
+        while (curr != null) {
+            map.put(curr, 1);
+            curr = curr.next;
+        }
+
+        curr = headB;
+        while (curr != null) {
+            if (map.containsKey(curr)) {
+                return curr;
+            }
+            curr = curr.next;
+        }
+        return null;
+
+    }
+}
+
+```
+
+### 523 连续的子数组和
+
+方法一：前缀和+hash
+
+先计算前缀和，然后记录每个前缀和 % k的余数，如果有余数相同的且位置相隔2个及以上则存在
+
+时间复杂度：O(n)
+
+空间复杂度：O(n)
+
+
+```java
+class Solution {
+    public boolean checkSubarraySum(int[] nums, int k) {
+        // 计算前缀和
+        HashMap<Integer, Integer> map = new HashMap<>();
+        map.put(nums[0] % k, 0);
+        for (int i = 1; i < nums.length; i++) {
+            nums[i] += nums[i-1];
+            int tmp = nums[i] % k;
+            if (tmp == 0) return true;
+            if (map.containsKey(tmp)) {
+                int pos = map.get(tmp);
+                if (i - (pos+1) >= 1) return true;
+            } else {
+                map.put(tmp, i);
+            }    
+        }
+        return false;
+
+    }
+}
+
+```
+
+### 525 连续数组
+
+方法一：前缀和+hash
+
+这道题也是很巧妙的使用了前缀和+hash，要先把所有的0想成是-1,然后加和。
+
+时间复杂度：O(n)
+
+空间复杂度：O(n)
+
+
+```java
+class Solution {
+    public int findMaxLength(int[] nums) {
+        //
+        HashMap<Integer, Integer> map = new HashMap<>();
+        int currMax = 0;
+        map.put(-1, -1);
+        int cnt = -1;
+        for (int i = 0; i < nums.length; i++) {
+            if (nums[i] == 0) {
+                cnt--;
+            } else {
+                cnt++;
+            }
+            // System.out.printf("%d %d\n", i, cnt);
+            if (map.containsKey(cnt)) {
+                int tmp = i - map.get(cnt);
+                if (tmp > currMax) {
+                    currMax = tmp;
+                }
+            } else {
+                map.put(cnt, i);
+            }
+        }
+        return currMax;
+    }
+}
+
+```
+
+### 203 移除链表元素
+
+方法一：
+
+时间复杂度：O(n)
+
+空间复杂度：O(1)
+
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode() {}
+ *     ListNode(int val) { this.val = val; }
+ *     ListNode(int val, ListNode next) { this.val = val; this.next = next; }
+ * }
+ */
+class Solution {
+    public ListNode removeElements(ListNode head, int val) {
+        while (head != null && head.val == val) {
+            head = head.next;
+        }
+        if (head == null) return head;
+        ListNode curr = head;
+        ListNode former = null;
+        while (curr != null) {
+            if (curr.val == val) {
+                former.next = curr.next;
+                curr = curr.next;
+            } else {
+                former = curr;
+                curr = curr.next;
+            }
+        }
+        return head;
+    }
+}
+
+```
+
+简化版（构造伪头节点）
+
+```java
+class Solution {
+    public ListNode removeElements(ListNode head, int val) {
+        head = new ListNode(-1, head);
+        ListNode curr = head.next;
+        ListNode former = head;
+        while (curr != null) {
+            if (curr.val == val) {
+                former.next = curr.next;
+                curr = curr.next;
+            } else {
+                former = curr;
+                curr = curr.next;
+            }
+        }
+        return head.next;
+    }
+}
 ```
 
