--- a/手写经典算法系列.md
+++ b/手写经典算法系列.md
@@ -1,3 +1,50 @@
+### 快速排序
+
+快速排序的思想很简单，主要在于怎么进行原地操作。
+
+```java
+import java.util.*;
+public class Main {
+
+    public void quicksort(int[] nums, int i, int j) {
+        if (j <= i) return;
+        swap(nums, i, j);
+        int largerIndex = i;
+        for (int m = i; m < j; m++) {
+            if (nums[m] < nums[j]) {
+                swap(nums, m, largerIndex);
+                largerIndex++;
+            }
+        }
+        swap(nums, largerIndex, j);
+        quicksort(nums, i, largerIndex-1);
+        quicksort(nums, largerIndex+1, j);
+    }
+
+    public void swap(int[] nums, int i, int j) {
+        int tmp = nums[i];
+        nums[i] = nums[j];
+        nums[j] = tmp;
+    }
+
+    public static void main(String[] args) {
+        int[] nums = {7, 5, 4, 8, 2, 1, 9, 10};
+        Main mm = new Main();
+        mm.quicksort(nums, 0, nums.length-1);
+        for (int i = 0; i < nums.length; i++) {
+            System.out.printf("%d ", nums[i]);
+        }
+        System.out.println();
+    }
+}
+
+```
+
+### 最小堆
+
+主要需要定义`upShift`和`downShift`
+
+```java
 import java.util.*;
 public class Main {
 
@@ -105,3 +152,5 @@ public class Main {
         mm.test();
     }
 }
+
+```
