--- a/题解.md
+++ b/题解.md
@@ -175,6 +175,8 @@ LCP 13 寻宝
 
 LCP19 秋叶收藏集
 
+471 一和零
+
 ## 四. 双指针
 
 19 删除链表的倒数第N个结点
@@ -8689,5 +8691,48 @@ class Solution {
         return head.next;
     }
 }
+```
+
+### 471 一和零
+
+方法一：这道题是一个典型的动态规划问题，要求满足的条件是所有0的个数小于等于吗，所有1的个数小于等于n,要找到最大的子集。所取的可以是不连续的，如果我们考虑所有子集的情况的话那时间复杂度太高了。我们应该从条件出发，这里的m和n都不会特别大，使用动态规划，构建数值`dp[i][j][k]`表示在第i个位置之前，满足0的个数<=j, 1的个数<=k的最大子集个数。
+
+时间复杂度：O(lmn)
+
+空间复杂度：O(lmn)
+
+```java
+class Solution {
+    public int findMaxForm(String[] strs, int m, int n) {
+        int l = strs.length;
+        int[][][] dp = new int[l+1][m+1][n+1];
+        for (int i = 1; i <= l; i++) {
+            String curr = strs[i-1];
+            int a = 0, b = 0;
+            for (int t = 0; t < curr.length(); t++) {
+                if (curr.charAt(t) == '0') {
+                    a++;
+                } else {
+                    b++;
+                }
+            }
+
+            for (int j = 0; j <= m; j++) {
+                for (int k = 0; k <= n; k++) {
+                    int tmp = dp[i-1][j][k];
+                    if (j-a >= 0 && k-b >= 0) {
+                        if (tmp < dp[i-1][j-a][k-b] + 1) {
+                            tmp = dp[i-1][j-a][k-b] + 1;
+                        }
+                    }
+                    dp[i][j][k] = tmp;
+                }
+            }
+        }
+        return dp[l][m][n];
+    }
+}
+
+
 ```
 
