--- a/题解.md
+++ b/题解.md
@@ -177,6 +177,8 @@ LCP19 秋叶收藏集
 
 471 一和零
 
+494 目标和
+
 ## 四. 双指针
 
 19 删除链表的倒数第N个结点
@@ -8733,6 +8735,58 @@ class Solution {
     }
 }
 
+
+```
+
+### 494 目标和
+
+方法一：动态规划
+
+因为这里面有负数的情况，所以我们将每个数-a, a变成0, 2a。`newTarget = target + allSum`。
+
+枚举肯定是超时的，但我们可以枚举所有的加和，也就是动态规划。`dp[i][j] = dp[i-1][j] + dp[i-1][j-nums[i-1]]`
+
+时间复杂度：O(n*allSum)
+
+空间复杂度：O(n*allSum)
+
+
+```java
+class Solution {
+    public int findTargetSumWays(int[] nums, int target) {
+        int l = nums.length;
+        int allSum = 0;
+        for (int i = 0; i < l; i++) {
+            allSum += nums[i] > 0?nums[i]: -nums[i];
+        }
+
+        if (target < -allSum || target > allSum) {
+            return 0;
+        }
+
+
+        int[][] dp = new int[l+1][2*allSum+1];
+        int newTarget = target + allSum;
+        if (nums[0] != 0) {
+            dp[1][0] = 1;
+            dp[1][2*nums[0]] = 1;
+        } else {
+            dp[1][0] = 2;
+        }
+
+
+        for (int i = 2; i <= l; i++) {
+            for (int j = 0; j < 2*allSum+1; j++) {
+                dp[i][j] = dp[i-1][j];
+                if (j-2*nums[i-1] >= 0) {
+                    dp[i][j] += dp[i-1][j-2*nums[i-1]];
+                }
+            }
+        }
+
+        return dp[l][newTarget];
+    }
+}
 
 ```
 
