--- a/题解.md
+++ b/题解.md
@@ -179,6 +179,10 @@ LCP19 秋叶收藏集
 
 494 目标和
 
+1049 最后的一块石头的重量II
+
+879 盈利计划
+
 ## 四. 双指针
 
 19 删除链表的倒数第N个结点
@@ -8787,6 +8791,96 @@ class Solution {
         return dp[l][newTarget];
     }
 }
+
+```
+
+### 1049 最后的一块石头的重量II
+
+方法一：动态规划
+
+其实问题可以转化成每个石子是取正还是取负加和，这样就和494的问题一样了。
+
+时间复杂度：O(l*allSum)
+
+空间复杂度：O(l*allSum)
+
+
+```java
+class Solution {
+    public int lastStoneWeightII(int[] stones) {
+        int l = stones.length;
+        int allSum = 0;
+        for (int i = 0; i < l; i++) {
+            allSum += stones[i];
+        }
+
+        int[][] dp = new int[l+1][2*allSum+1];
+
+        dp[0][0] = 1;
+        dp[0][2*stones[0]] = 1;
+
+        for (int i = 1; i <= l; i++) {
+            for (int j = 0; j < 2*allSum+1; j++) {
+                dp[i][j] = dp[i-1][j];
+                if (i > 1 && j-2*stones[i-1] >= 0) {
+                    dp[i][j] += dp[i-1][j-2*stones[i-1]];
+                }
+
+                if (i == l && j >= allSum && dp[i][j] > 0) {
+                    return j-allSum;
+                }
+            }
+
+        }
+        return 0;
+    }
+}
+
+```
+
+### 879 盈利计划
+
+
+```java
+class Solution {
+    public int profitableSchemes(int n, int minProfit, int[] group, int[] profit) {
+        int l = group.length;
+        int allSum = 0;
+        for (int i = 0; i < l; i++) {
+            allSum += profit[i];            
+        }
+
+        int[][] former = new int[allSum+1][n+1];
+        int[][] curr = new int[allSum+1][n+1];
+        int ans = 0;
+        int max_value = (int)(1e9) + 7;
+
+        if (minProfit == 0) ans++;
+
+        for (int i = 1; i <= l; i++) {
+            for (int j = allSum; j >= 0; j--) {
+                for (int k = n; k >= 0; k--) {
+                    curr[j][k] = former[j][k];
+                    if (j-profit[i-1] >= 0 && k-group[i-1] >= 0) {
+                        curr[j][k] = (curr[j][k] + former[j-profit[i-1]][k-group[i-1]]) % max_value;
+                        if (j-profit[i-1] == 0 && k-group[i-1] == 0) {
+                            curr[j][k] += 1;
+                        }
+                    }
+                    if (i == l && j >= minProfit) {
+                        ans += curr[j][k];
+                        if (ans >= max_value) ans = ans % max_value;
+                        
+                    }
+
+                }
+            }
+            former = curr;
+        }
+        
+        return ans;
+    }
+}      
 
 ```
 
