--- a/题解.md
+++ b/题解.md
@@ -183,6 +183,10 @@ LCP19 秋叶收藏集
 
 879 盈利计划
 
+518 零钱兑换II
+
+279 完全平方数
+
 ## 四. 双指针
 
 19 删除链表的倒数第N个结点
@@ -8840,6 +8844,14 @@ class Solution {
 
 ### 879 盈利计划
 
+方法一：动态规划
+
+这道题要找的是盈利大于等于`minProfit`且使用人数小于等于`n`的方案总和，我们可以构造一个数组`dp[i][j][k]`表示在`i`个项目前，盈利为`j`且使用员工为`k`的方案总和，则`dp[i][j][k] = dp[i-1][j][k] + dp[i-1][j-profit[i-1]][k-profit[i-1]]`。需要注意其中除余的操作。如果这里面将`dp[i][j][k]`表示为表示在`i`个项目前，盈利至少为`j`且使用员工为`k`的方案总和的话时空复杂度会更低，需要注意。
+
+时间复杂度：O(l* allSum * n)
+
+空间复杂度：O(allSum * n)
+
 
 ```java
 class Solution {
@@ -8881,6 +8893,80 @@ class Solution {
         return ans;
     }
 }      
+
+```
+### 518 零钱兑换II
+
+方法一：动态规划
+
+本题要计算的是有多少种满足和为amount的可能，每个硬币的数量无限多。`dp[i][j]`表示的是前`i`个硬币满足和为j的所有可能，`dp[i][j] = dp[i-1][j] + dp[i-1][j-coins[i-1]] + dp[i-1][j-2*coins[i-1]]...`。
+
+时间复杂度：O(l*amount) -> O(amount)
+
+空间复杂度：O(l*amount)
+
+```java
+class Solution {
+    public int change(int amount, int[] coins) {
+        int l = coins.length;
+        int[][] dp = new int[l+1][amount+1];
+        
+        dp[0][0] = 1;
+
+        for (int i = 1; i <= l; i++) {
+            for (int j = 0; j <= amount; j++) {
+                dp[i][j] = dp[i-1][j];
+                int tmp = j;
+                while (tmp-coins[i-1] >= 0) {
+                    dp[i][j] += dp[i-1][tmp-coins[i-1]];
+                    tmp -= coins[i-1];
+                }
+            }
+        }
+        return dp[l][amount];
+    }
+}       
+
+```
+
+
+### 279 完全平方数
+
+方法一：动态规划，只能说跟昨天的题一摸一样。最原始的想法是构造一个`dp[i][j]`，表示在前i个数的情况下满足平方和为j的最小的个数。则`dp[i][j] = min(dp[i-1][j], dp[i-1][j-i*i]+1, dp[i-1][j-2*i*i]+2, ...)`，但是这样不仅会超时还会超内存。所以它可以进一步优化，我们可以发现`dp[i][j] = min(dp[i-1][j], dp[i][j-i*i]+1, dp[i][j-2*i*i]+2, ..., )`, 我们同时可以发现`dp[i][j-i*i] <= dp[i][j-2*i*i]+1`是必然的。所以有`dp[i][j] = min(dp[i-1][j], dp[i][j-i*i]+1)`
+
+时间复杂度：O(l*n)
+
+空间复杂度：O(n)
+
+```java
+class Solution {
+    public int numSquares(int n) {
+        int l = n;
+        int[] dp = new int[n+1];
+        
+        for (int j = 1; j <= n; j++) {
+            dp[j] = j;
+        }
+
+        for (int i = 1; i*i <= l; i++) {
+            for (int j = 1; j <= n; j++) {
+                int tmp = j - i*i;
+                if (tmp >= 0) dp[j] = Math.min(dp[j], dp[tmp] + 1);
+                // int k = 1;
+                // while (tmp >= 0) {
+                //     if (dp[j] != 0) {
+                //         dp[j] = Math.min(dp[j], dp[tmp]+k);
+                //     } else {
+                //         dp[j] = dp[tmp] + 1;
+                //     }
+                //     tmp -= i*i;
+                //     k++;
+                // }
+            }
+        }
+        return dp[n];
+    }
+}
 
 ```
 
