--- a/题解.md
+++ b/题解.md
@@ -80,6 +80,16 @@ LCP18 早餐组合
 
 525 连续数组
 
+278 第一个错误的版本
+
+374 猜数字大小
+
+1899 合并若干三元组以形成目标三元组
+
+852 山脉数组的峰顶索引
+
+65 有效数字
+
 ## 二. 树/链表
 
 2 两数相
@@ -187,6 +197,10 @@ LCP19 秋叶收藏集
 
 279 完全平方数
 
+1449 数位成本和为目标值的最大数字
+
+877 石子游戏
+
 ## 四. 双指针
 
 19 删除链表的倒数第N个结点
@@ -258,6 +272,8 @@ LCP19 秋叶收藏集
 33 搜索旋转排序数组
 
 34 在排序数组中查找元素的第一个和最后一个位置
+
+1898 可移除字符的最大数目
 
 ## 题解
 
@@ -8970,3 +8986,485 @@ class Solution {
 
 ```
 
+### 278 第一个错误的版本
+
+方法一：递归
+
+需要注意的一点是`mid = s + (t - s)/2`，这里为了防止溢出
+
+时间复杂度：O(log(n))
+
+空间复杂度：O(log(n))
+
+```java
+/* The isBadVersion API is defined in the parent class VersionControl.
+      boolean isBadVersion(int version); */
+
+public class Solution extends VersionControl {
+    public int firstBadVersion(int n) {
+        return helper(1, n);
+    }
+
+    public int helper(int s, int t) {
+        if (s == t) {
+            return s;
+        }
+        int mid = s + (t - s)/2;
+        if (!isBadVersion(mid)) {
+            return helper(mid+1, t);
+        } else {
+            return helper(s, mid);
+        }
+    }
+}
+```
+
+
+
+### 1449 数位成本和为目标值的最大数字
+
+方法一：动态规划
+
+这道题每个位置的树有选择和不选两种选择，而选择是可以选择无穷多个，我们的目的不是要找有多少种和为target的可能，而是要找生成的最大的数且满足和为target。令`dp[i][j]`表示前`i`个满足和为`j`的最大数，那么我们可以得到`dp[i][j] = max(dp[i-1][j], (将i插入到dp[i-1][j-cost[i-1]]), (将两个i插入到dp[i-1][j-2*cost[i-1]])...)`，或者可以这样表示`dp[i][j] = max(dp[i-1][j], (将i插入到dp[i][j-cost[i-1]]))`
+
+时间复杂度：
+
+空间复杂度：
+
+```java
+class Solution {
+    public String largestNumber(int[] cost, int target) {
+        int l = cost.length;
+        StringBuffer[] dp = new StringBuffer[target+1];
+
+        for (int j = 0; j <= target; j++) {
+            dp[j] = new StringBuffer();
+            if (j == cost[0]) {
+                dp[j].append('1');
+            }
+        }
+
+        // dp[i][j] 表示前i个能满足和为j的最大数
+        // dp[i][j] = max(dp[i-1][j], dp[i-1][j-cost[i-1]] * 10 + )
+        for (int i = 1; i <= l; i++) {
+            for (int j = 1; j <= target; j++) {
+
+                if ((j - cost[i-1] > 0 && dp[j-cost[i-1]].length() != 0) || j - cost[i-1] == 0) {
+                    StringBuffer tmp = helper(dp[j-cost[i-1]], i);
+
+                    if (dp[j].length() < dp[j-cost[i-1]].length() + 1) {
+                        dp[j] = tmp;
+                    } else if (dp[j].length() == dp[j-cost[i-1]].length() + 1) {
+                        int m = 0;
+                        while (m < dp[j].length() && dp[j].charAt(m) == tmp.charAt(m)) {
+                            m++;
+                        }
+                        if (m < dp[j].length()) {
+                            if (dp[j].charAt(m) < tmp.charAt(m)) {
+                                dp[j] = tmp;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        if (dp[target].length() == 0) {
+            return "0";
+        } else {
+            return dp[target].toString();
+        }
+    }
+
+    public StringBuffer helper(StringBuffer sb, int x) {
+        // consider that sb is sorted already
+        sb = new StringBuffer(sb);
+        char c = int2char(x);
+        for (int i = 0; i < sb.length(); i++) {
+            if (sb.charAt(i) - '0' <= x) {
+                sb.insert(i, c);
+                return sb;
+            }
+        }
+        sb.insert(sb.length(), c);
+        return sb;
+    }
+
+    public char int2char(int x) {
+        char c;
+        switch (x) {
+            case 0:
+                c = '0';
+                break;
+            case 1:
+                c = '1';
+                break;
+            case 2:
+                c = '2';
+                break;
+            case 3:
+                c = '3';
+                break;
+            case 4:
+                c = '4';
+                break;
+            case 5:
+                c = '5';
+                break;
+            case 6:
+                c = '6';
+                break;
+            case 7:
+                c = '7';
+                break;
+            case 8:
+                c = '8';
+                break;
+            case 9:
+                c = '9';
+                break;
+            default:
+                c = 'x';
+        }
+        return c;
+    }
+
+}
+```
+
+
+
+### 374 猜数字大小
+
+方法一：递归
+
+时间复杂度：O(logn)
+
+空间复杂度：O(logn)
+
+```java
+/** 
+ * Forward declaration of guess API.
+ * @param  num   your guess
+ * @return 	     -1 if num is lower than the guess number
+ *			      1 if num is higher than the guess number
+ *               otherwise return 0
+ * int guess(int num);
+ */
+
+public class Solution extends GuessGame {
+    public int guessNumber(int n) {
+        return helper(1, n);
+    }
+
+    public int helper(int s, int t) {
+        int mid =  s + (t - s) / 2;
+        int c = guess(mid);
+        if (c == -1) {
+            return helper(s, mid-1);
+        } else if (c == 1) {
+            return helper(mid+1, t);
+        } else {
+            return mid;
+        }
+    }
+}
+```
+
+### 1897 重新分配字符使所有字符串都相等
+
+方法一：直接讨论
+
+时间复杂度：O(n)
+
+空间复杂度：O(n)
+
+```java
+class Solution {
+    public boolean makeEqual(String[] words) {
+        int[] cnt = new int[26];
+        for (int i = 0; i < words.length; i++) {
+            String curr = words[i];
+            for (int j = 0; j < curr.length(); j++) {
+                cnt[curr.charAt(j) - 'a']++;
+            }
+        }
+
+        for (int i = 0; i < 26; i++) {
+            if (cnt[i] % words.length != 0) {
+                return false;
+            }
+        }
+        return true;
+    }
+}
+```
+
+### 1898 可移除字符的最大数目
+
+方法一：二分法
+
+如果去掉`[0, k)`之间的字符都满足条件，则去掉`[0, k') 其中k' <= k`之间的字符也都会满足条件。所以我们很自然的想法就是二分法，然后`check(k)`看其是否满足条件。
+
+时间复杂度：O(n*logn)
+
+空间复杂度：O(logn)
+
+```java
+class Solution {
+    public int maximumRemovals(String s, String p, int[] removable) {
+        int s_length = s.length();
+        int p_length = p.length();
+
+        int m = 0, n = removable.length;
+        int ans = 0;
+        while (m <= n) {
+            int mid = (m + n) / 2;
+            int x = check(mid, s, p, removable);
+            if (x == 1) {
+                m = mid+1;
+                ans = mid;
+            } else {
+                n = mid-1;
+            }
+
+        }
+        return ans;
+    }
+
+    public int check(int k, String s, String p, int[] removable) {
+        int[] state = new int[s.length()];
+        for (int i = 0; i < k; i++) {
+            state[removable[i]] = -1;
+        }
+        int j = 0;
+        for (int i = 0; i < s.length(); i++) {
+            if (state[i] == 0 && s.charAt(i) == p.charAt(j)) {
+                j++;
+            }
+            if (j == p.length()) {
+                return 1;
+            }
+        }
+        return -1;
+    }
+}
+```
+
+### 1899 合并若干三元组以形成目标三元组
+
+方法一：贪心
+
+其实就是取k个数组每个位置对应的最大值，然后看其是否满足条件。
+
+如果某个数组中的存在一个数大于对应target中对应的数，则它一定不在考虑中；如果某个数组中的任意的数都小于等于target中对应的数，则它的加入不影响最后的结果
+
+时间复杂度：O(n)
+
+空间复杂度：O(n)
+
+```java
+class Solution {
+    public boolean mergeTriplets(int[][] triplets, int[] target) {
+        int a = 0, b = 0, c = 0;
+        for (int i = 0; i < triplets.length; i++) {
+            int[] curr = triplets[i];
+            if (curr[0] <= target[0] && curr[1] <= target[1] && curr[2] <= target[2]) {
+                a = Math.max(a, curr[0]);
+                b = Math.max(b, curr[1]);
+                c = Math.max(c, curr[2]);
+            }
+        }
+        if (a == target[0] && b == target[1] && c == target[2]) {
+            return true;
+        } else {
+            return false;
+        }
+    }
+}
+```
+
+### 852 山脉数组的峰顶索引
+
+方法一：递归
+
+时间复杂度：O(logn)
+
+空间复杂度：O(logn)
+
+```java
+class Solution {
+    public int peakIndexInMountainArray(int[] arr) {
+        return helper(0, arr.length-1, arr);
+    }
+
+    public int helper(int s, int t, int[] arr) {
+        int mid = (s + t) / 2;
+        if (arr[mid] <= arr[mid+1]) {
+            return helper(mid+1, t, arr);
+        } else {
+            if (arr[mid] <= arr[mid-1]) {
+                return helper(s, mid-1, arr);
+            } else {
+                return mid;
+            }
+        }
+    }
+}
+
+```
+
+### 877 石子游戏
+
+方法一：动态规划
+
+典型的动态规划，`dp[i][j]`表示在`[i,j]`之间alex能得到的最大值，则`dp[i][j] = Math.max( cnt[i+1][j]-dp[i+1][j]+piles[i], cnt[i][j-1]-dp[i][j-1]+piles[j] );`
+
+时间复杂度：O(n^2)
+
+空间复杂度：O(n^2)->O(n)
+
+```java
+class Solution {
+    public boolean stoneGame(int[] piles) {
+        int n = piles.length;
+        int[][] cnt = new int[n+1][n+1];
+        int[][] dp = new int[n+1][n+1];
+        for (int i = 0; i < n; i++) {
+            cnt[i][i] = piles[i];
+            dp[i][i] = piles[i];
+        }
+
+        for (int i = 0; i < n; i++) {
+            for (int j = i+1; j < n; j++) {
+                cnt[i][j] = cnt[i][j-1] + piles[j];
+            }
+        }
+
+        for (int k = 1; k < n; k++) {
+            for (int i = 0; i+k < n; i++) {
+                int j = i+k;
+                dp[i][j] = Math.max( cnt[i+1][j]-dp[i+1][j]+piles[i], cnt[i][j-1]-dp[i][j-1]+piles[j] );
+            }
+        }
+        if (2 * dp[0][n-1] > cnt[0][n-1])
+            return true;
+        else
+            return false;
+    }
+}
+
+```
+
+### 65 有效数字
+
+方法一：自动机
+
+就是一些状态的转化，使用hashMap存储转移状态。
+
+时间复杂度：O(N)
+
+空间复杂度：O(1)
+
+```java
+class Solution {
+    public boolean isNumber(String s) {
+        State state = State.INITIAL;
+        HashMap<State, HashMap<charType, State>> map = new HashMap<>();
+
+        HashMap<charType, State> initialMap = new HashMap<>();
+        initialMap.put(charType.NUMBER, State.INTEGER);
+        initialMap.put(charType.SIGN, State.SIGN);
+        initialMap.put(charType.POINT, State.POINT_NLN);
+
+        HashMap<charType, State> signMap = new HashMap<>();
+        signMap.put(charType.NUMBER, State.INTEGER);
+        signMap.put(charType.POINT, State.POINT_NLN);
+
+        HashMap<charType, State> point_nlnMap = new HashMap<>();
+        point_nlnMap.put(charType.NUMBER, State.DECIMAL);
+
+        HashMap<charType, State> point_lnMap = new HashMap<>();
+        point_lnMap.put(charType.NUMBER, State.DECIMAL);
+        point_lnMap.put(charType.EXP, State.EXP);
+
+        HashMap<charType, State> integerMap = new HashMap<>();
+        integerMap.put(charType.NUMBER, State.INTEGER);
+        integerMap.put(charType.EXP, State.EXP);
+        integerMap.put(charType.POINT, State.POINT_LN);
+
+        HashMap<charType, State> decimalMap = new HashMap<>();
+        decimalMap.put(charType.NUMBER, State.DECIMAL);
+        decimalMap.put(charType.EXP, State.EXP);
+
+        HashMap<charType, State> expMap = new HashMap<>();
+        expMap.put(charType.SIGN, State.EXP_SIGN);
+        expMap.put(charType.NUMBER, State.EXP_NUMBER);
+
+        HashMap<charType, State> exp_signMap = new HashMap<>();
+        exp_signMap.put(charType.NUMBER, State.EXP_NUMBER);
+
+        HashMap<charType, State> exp_numberMap = new HashMap<>();
+        exp_numberMap.put(charType.NUMBER, State.EXP_NUMBER);
+
+        map.put(State.INITIAL, initialMap);
+        map.put(State.SIGN, signMap);
+        map.put(State.POINT_NLN, point_nlnMap);
+        map.put(State.POINT_LN, point_lnMap);
+        map.put(State.INTEGER, integerMap);
+        map.put(State.DECIMAL, decimalMap);
+        map.put(State.EXP, expMap);
+        map.put(State.EXP_SIGN, exp_signMap);
+        map.put(State.EXP_NUMBER, exp_numberMap);
+
+        for (int i = 0; i < s.length(); i++) {
+            char c = s.charAt(i);
+            charType ct = getCharType(c);
+            HashMap<charType, State> currMap = map.get(state);
+            if (currMap.containsKey(ct)) {
+                state = currMap.get(ct);
+            } else {
+                return false;
+            }
+        }
+        return state == State.INTEGER || state == State.DECIMAL || state == State.EXP_NUMBER || state == State.POINT_LN;
+    }   
+
+    public charType getCharType(char c) {
+        if (c == '+' || c == '-') {
+            return charType.SIGN;
+        } else if (c >= '0' && c <= '9') {
+            return charType.NUMBER;
+        } else if (c == '.') {
+            return charType.POINT;
+        } else if (c == 'e' || c == 'E') {
+            return charType.EXP;
+        } else {
+            return charType.INVALID;
+        }
+    }
+
+    enum charType {
+        NUMBER,
+        SIGN,
+        POINT,
+        EXP,
+        INVALID;
+    }
+
+    enum State {
+        INITIAL,
+        SIGN,
+        POINT_NLN,
+        POINT_LN,
+        INTEGER,
+        DECIMAL,
+        EXP,
+        EXP_SIGN,
+        EXP_NUMBER
+    }
+
+}
+
+
+```
