--- a/题解.md
+++ b/题解.md
@@ -90,6 +90,8 @@ LCP18 早餐组合
 
 65 有效数字
 
+483 最小好进制
+
 ## 二. 树/链表
 
 2 两数相
@@ -9466,5 +9468,51 @@ class Solution {
 
 }
 
+
+```
+
+### 483 最小好进制
+
+方法一：二分
+
+`n = 1 + x + x^2+...x^k`，我们目标是找到最小的`x`满足前面的式子，那么`x`越小`k`越大，那么最大最大`x=n-1`。因为给定了`n`的范围`[0, 10e18]`，所以我们可以得出当`x=2`时，`k`最大取64，也就是`k`的范围我们可以知道是`[1, 64]`，然后对每个`k`我们遍历x，从`[1, n^(1/k)]`进行二分。
+
+时间复杂度：O(k^2)
+
+空间复杂度：O(1)
+
+
+```java
+class Solution {
+    public String smallestGoodBase(String n) {
+        long number = Long.parseLong(n);
+        int kMax = 64;
+        for (int k = kMax; k >= 2; k--) {
+            int s = 2;
+            int t = (int) Math.floor(Math.pow(number, 1.0/k)); 
+
+            while (s <= t) {
+                int mid = (s + t) / 2;
+                long tmp = helper(mid, k);
+                if (tmp == number) {
+                    return Integer.toString(mid);
+                } else if (tmp < number) {
+                    s = mid+1;
+                } else {
+                    t = mid-1;
+                }
+            }
+        }
+        return Long.toString(number - 1);
+    }
+
+    public long helper(int x, int k) {
+        long ans = 1;
+        for (int i = 0; i < k; i++) {
+            ans = ans * x + 1;
+        }
+        return ans;
+    }
+}
 
 ```
