--- a/题解.md
+++ b/题解.md
@@ -92,6 +92,8 @@ LCP18 早餐组合
 
 483 最小好进制
 
+1600 皇位继承顺序
+
 ## 二. 树/链表
 
 2 两数相
@@ -276,6 +278,10 @@ LCP19 秋叶收藏集
 34 在排序数组中查找元素的第一个和最后一个位置
 
 1898 可移除字符的最大数目
+
+## 八. 回溯
+
+1239 串联字符串的最大长度
 
 ## 题解
 
@@ -9514,5 +9520,121 @@ class Solution {
         return ans;
     }
 }
+
+```
+
+### 1239 串联字符串的最大长度
+
+方法一: 回溯
+
+此题不能背包，只能回溯求解。构造一个`state`数组，里面存放的每个字符当前是否在字符串中出现。
+
+时间复杂度：O(l*2^N)
+
+空间复杂度：O(N)
+
+```java
+class Solution {
+    int maxL = 0;
+    public int maxLength(List<String> arr) {
+        char[] state = new char[26];
+        StringBuffer sb = new StringBuffer();
+        backtrack(0, state, arr, 0);
+        return maxL; 
+    }
+
+    public void backtrack(int i, char[] state, List<String> arr, int currL) {
+        if (i == arr.size()) return;
+        String tmp = arr.get(i);
+        int flag = 1;
+        int pos = 0;
+        for (int j = 0; j < tmp.length(); j++) {
+            int x = tmp.charAt(j) - 'a';
+            if (state[x] == 0) {
+                state[x] = 1;
+            } else {
+                flag = 0;
+                pos = j;
+                break;
+            }
+        }
+        if (flag == 1) {
+            if (maxL < currL+tmp.length()) {
+                maxL = currL + tmp.length();
+            }
+            pos = tmp.length();
+
+            backtrack(i+1, state, arr, currL+tmp.length());
+        }
+
+        for (int j = 0; j < pos; j++) {
+            int x = tmp.charAt(j) - 'a';
+            state[x] = 0;
+        } 
+        backtrack(i+1, state, arr, currL);
+
+    }
+}
+
+```
+
+### 1600 皇位继承顺序
+
+方法一：构造一个`<parent, childs>`的map，以及一个`death`的map，里面存的是所有死亡的孩子
+
+时间复杂度：O(n)
+
+空间复杂度：O(n)
+
+```java
+class ThroneInheritance {
+
+    HashMap<String, List<String>> map = new HashMap<>();
+    HashMap<String, Integer> death = new HashMap<>();
+    String kingName;
+    public ThroneInheritance(String kingName) {
+
+        map.put(kingName, new LinkedList<String>());
+        this.kingName = kingName;
+
+    }
+    
+    public void birth(String parentName, String childName) {
+        List<String> childs = map.get(parentName);
+        childs.add(childName);
+        if (!map.containsKey(childName)) {
+            map.put(childName, new LinkedList<String>());    
+        }
+    }
+    
+    public void death(String name) {
+        death.put(name, -1);
+    }
+    
+    public List<String> getInheritanceOrder() {
+        List<String> currOrder = new LinkedList<>();
+        helper(currOrder, this.kingName);
+        return currOrder;
+    }
+
+    public void helper(List<String> currOrder, String curr) {
+        if (!death.containsKey(curr)) {
+            currOrder.add(curr);
+        }
+        List<String> childs = map.get(curr);
+        for (int i = 0; i < childs.size(); i++) {
+            String child = childs.get(i);
+            helper(currOrder, child);
+        }
+    }
+}
+
+/**
+ * Your ThroneInheritance object will be instantiated and called as such:
+ * ThroneInheritance obj = new ThroneInheritance(kingName);
+ * obj.birth(parentName,childName);
+ * obj.death(name);
+ * List<String> param_3 = obj.getInheritanceOrder();
+ */
 
 ```
