--- a/题解.md
+++ b/题解.md
@@ -94,6 +94,8 @@ LCP18 早餐组合
 
 1600 皇位继承顺序
 
+剑指offer 15 二进制中1的个数
+
 ## 二. 树/链表
 
 2 两数相
@@ -282,6 +284,10 @@ LCP19 秋叶收藏集
 ## 八. 回溯
 
 1239 串联字符串的最大长度
+
+401 二进制手表
+
+剑指offer 38 字符串的排列
 
 ## 题解
 
@@ -9638,3 +9644,160 @@ class ThroneInheritance {
  */
 
 ```
+
+### 401 二进制手表
+
+方法一：回溯，用一个`hMap`表示hour的取了各个1的List，`mMap`表示minite取了各个1的List。
+
+时间复杂度：O(2^6)
+
+空间复杂度：O(2^6)
+
+```java
+class Solution {
+    public List<String> readBinaryWatch(int turnedOn) {
+        StringBuffer sb = new StringBuffer();
+        HashMap<Integer, List<Integer>> hMap = new HashMap<>();
+        HashMap<Integer, List<Integer>> mMap = new HashMap<>();
+        int length;
+        List<String> ans = new LinkedList<>();
+
+        helper(0, 0, hMap, Math.min(turnedOn, 4), 0, 4);
+        helper(0, 0, mMap, Math.min(turnedOn, 6), 0, 6);
+
+        for (int i = 0; i <= Math.min(turnedOn, 4); i++) {
+            int j = turnedOn - Math.min(i, 4);
+            List<Integer> hList = hMap.get(i);
+            List<Integer> mList = mMap.get(j);
+            int hour, mini;
+            if (hList == null || mList == null) {
+                continue;
+            }
+            
+            for (int m = 0; m < hList.size(); m++) {
+                hour = hList.get(m);
+                for (int n = 0; n < mList.size(); n++) {
+                    mini = mList.get(n);
+                    if (mini < 10) {
+                        ans.add(String.valueOf(hour) + ":0" + String.valueOf(mini));
+                    } else {
+                        ans.add(String.valueOf(hour) + ":" + String.valueOf(mini));
+                    }
+                }
+            }
+        }
+        return ans;
+    }
+
+    public void helper(int i, int currSum, HashMap<Integer, List<Integer>> hMap, int cntLength, int cnt, int length) {
+        if (cnt > cntLength || i > length) return;
+        List<Integer> tmp;
+        if (!hMap.containsKey(cnt)) {
+            tmp = new LinkedList<>();
+            if (length == 6 && currSum <= 59) {
+                tmp.add(currSum);
+            } else if (length == 4 && currSum <= 11) {
+                tmp.add(currSum);
+            } else {
+                return;
+            }
+            hMap.put(cnt, tmp);
+        } else {
+            tmp = hMap.get(cnt);
+            if (tmp.get(tmp.size()-1) != currSum) {
+                if (length == 6 && currSum <= 59) {
+                    tmp.add(currSum);
+                } else if (length == 4 && currSum <= 11) {
+                    tmp.add(currSum);
+                } else {
+                    return;
+                }
+            }
+                
+        }
+
+        currSum += (int)Math.pow(2, i);
+        helper(i+1, currSum, hMap, cntLength, cnt+1, length);
+
+        helper(i+1, currSum-(int)Math.pow(2, i), hMap, cntLength, cnt, length);
+
+    }
+}
+
+```
+
+剑指offer 38 字符串的排列
+
+方法一：回溯，构造hash表存储已经遇到的String
+
+时间复杂度：O(n^n)
+
+空间复杂度：O(n!)
+
+```java
+class Solution {
+    int k = 0;
+    List<String> ans = new LinkedList<>();
+    HashMap<String, Integer> map = new HashMap<>();
+    public String[] permutation(String s) {
+        List<Character> charList = new ArrayList<>();
+        for (int i = 0; i < s.length(); i++) {
+            char c = s.charAt(i);
+            charList.add(c);
+        }
+        // System.out.println(charList);
+        StringBuffer sb = new StringBuffer();
+        helper(sb, charList);
+
+        return ans.toArray(new String[ans.size()]);
+    }
+
+    public void helper(StringBuffer sb, List<Character> charList) {
+
+        if (sb.length() == charList.size()) {
+            String tmp = sb.toString();
+            if (!map.containsKey(tmp)) {
+                ans.add(tmp);
+                map.put(tmp, 0);
+            }
+        }
+
+        for (int i = 0; i < charList.size(); i++) {
+            if (charList.get(i) != '0') {
+                char c = charList.get(i);
+                charList.set(i, '0');
+                sb.append(c);
+                helper(sb, charList);
+                sb.delete(sb.length()-1, sb.length());
+                charList.set(i, c);
+            }
+        }
+    }
+}
+
+```
+
+### 剑指offer 15 二进制中1的个数
+
+方法一：位操作
+
+时间复杂度：O(1)
+
+空间复杂度：O(1)
+
+```java
+public class Solution {
+    // you need to treat n as an unsigned value
+    public int hammingWeight(int n) {
+        int cnt = 0;
+        for (int i = 0; i < 32; i++) {
+            cnt += n & 1;
+            n = n >> 1;
+        }
+        return cnt;
+    }
+}
+
+```
+
+
