--- a/题解.md
+++ b/题解.md
@@ -96,6 +96,9 @@ LCP18 早餐组合
 
 剑指offer 15 二进制中1的个数
 
+149 直线上最多的点数
+
+
 ## 二. 树/链表
 
 2 两数相
@@ -206,6 +209,8 @@ LCP19 秋叶收藏集
 1449 数位成本和为目标值的最大数字
 
 877 石子游戏
+
+Others 1 多少个基数可能
 
 ## 四. 双指针
 
@@ -9795,6 +9800,173 @@ public class Solution {
             n = n >> 1;
         }
         return cnt;
+    }
+}
+
+```
+
+### 149 直线上最多的点数
+
+方法一：统计每个点和其他点的斜率，然后统计斜率最多的个数。
+
+时间复杂度：O(n^2)
+
+空间复杂度：O(n)
+
+```java
+class Solution {
+    public int maxPoints(int[][] points) {
+        int n = points.length;
+        double[][] g = new double[n][n];
+        if (n == 1) return 1;
+
+        int ans = 2;
+        for (int i = 0; i < n; i++) {
+            for (int j = i+1; j < n; j++) {
+                if (points[i][0] - points[j][0] == 0) {
+                    g[i][j] = 1e6;
+                    g[j][i] = g[i][j];
+                    continue;
+                }
+                g[i][j] = (double) (points[i][1] - points[j][1]) / (points[i][0] - points[j][0]);
+                g[j][i] = g[i][j];
+
+            }
+        }
+
+        for (int i = 0; i < n; i++) {
+            HashMap<Double, Integer> map = new HashMap<>();
+            for (int j = 0; j < n; j++) {
+                if (j == i) continue;
+                if (!map.containsKey(g[i][j])) {
+                    map.put(g[i][j], 2);
+                } else {
+                    int tmp = map.get(g[i][j]);
+                    map.put(g[i][j], tmp+1);
+                    if (ans < tmp+1) {
+                        ans = tmp+1;
+                    }
+
+                }
+            }
+        }
+        return ans;
+    }
+}
+
+```
+
+### Others 1 多少个基数可能
+
+给定一个字符串，可以将其分割成任意块，问使得其分割的各个块的数均为质数且每块开头不能为0的可能数, 已知质数范围为[1, 1e6]
+
+方法一：递归
+
+时间复杂度：O(6^n)
+
+空间复杂度：O(1)
+
+```java
+import java.util.*;
+public class Main {
+
+    public class Solution {
+        public int MOD = (int) 1e9 + 7;
+
+        public boolean isPrime(int number) {
+            if (number == 1) return false;
+            for (int i = 2; i * i <= number; i++) {
+                if (number % i == 0) return false;
+            }
+            return true;
+        }
+
+        public int countPrimeStrings(String number) {
+            return helper(number, 0);
+        }
+
+        public int helper(String number, int i) {
+            int l = number.length();
+            if (i >= l) return 1;
+            if (number.charAt(i) == '0') return 0;
+            int ans = 0;
+            for (int k = 1; k <= 6; k++) {
+                if (i+k > l) break;
+                String sub = number.substring(i, i+k);
+                int num = Integer.valueOf(sub);
+                if (isPrime(num)) {
+                    ans += helper(number, i+k);
+                    ans %= MOD;
+                }
+            }
+            return ans;
+        }
+    }
+
+    public void test() {
+        Solution sol = new Solution();
+        System.out.println(sol.countPrimeStrings("11373"));
+        System.out.println(sol.countPrimeStrings("3175"));
+    }
+
+    public static void main(String[] args) {
+        Main mm = new Main();
+        mm.test();
+    }
+}
+
+
+```
+
+方法二：动态规划
+
+时间复杂度：O(n)
+
+空间复杂度：O(n)
+
+
+```java
+import java.util.*;
+public class Main {
+
+    public class Solution {
+        public int MOD = (int) 1e9 + 7;
+
+        public boolean isPrime(int number) {
+            if (number == 1) return false;
+            for (int i = 2; i * i <= number; i++) {
+                if (number % i == 0) return false;
+            }
+            return true;
+        }
+
+        public int countPrimeStrings(String number) {
+            int l = number.length();
+            int[] dp = new int[l+1];
+            dp[l] = 1;
+            for (int i = l-1; i >= 0; i--) {
+                for (int k = 1; k <= 6; k++) {
+                    if (i + k > l) break;
+                    String sub = number.substring(i, i+k);
+                    int num = Integer.valueOf(sub);
+                    if (isPrime(num))
+                        dp[i] += dp[i+k];
+                        dp[i] %= MOD;
+                }
+            }
+            return dp[0];
+        }
+    }
+
+    public void test() {
+        Solution sol = new Solution();
+        System.out.println(sol.countPrimeStrings("11373"));
+        System.out.println(sol.countPrimeStrings("3175"));
+    }
+
+    public static void main(String[] args) {
+        Main mm = new Main();
+        mm.test();
     }
 }
 
