--- a/题解.md
+++ b/题解.md
@@ -268,6 +268,14 @@ Others 1 多少个基数可能
 
 79 单词搜索
 
+752 打开转盘锁
+
+773 滑动谜题
+
+909 蛇梯棋
+
+815 公交线路
+
 ## 七. 分治
 
 35 搜索插入位置
@@ -9967,6 +9975,309 @@ public class Main {
     public static void main(String[] args) {
         Main mm = new Main();
         mm.test();
+    }
+}
+
+```
+
+### 752 打开转盘锁
+
+方法一: bfs。dfs是不行的。
+
+时间复杂度：O(9999)
+
+空间复杂度：O(9999)
+
+```java
+class Solution {
+    HashMap<String, Integer> deadMap;
+    Queue<Pair<String, Integer>> queue;
+    public int openLock(String[] deadends, String target) {
+        deadMap = new HashMap<>();
+        queue = new LinkedList<>();
+
+        for (int i = 0; i < deadends.length; i++) {
+            deadMap.put(deadends[i], 0);
+        }
+
+        if (deadMap.containsKey("0000")) return -1;
+
+        queue.offer(new Pair<String,Integer>("0000",0));
+        deadMap.put("0000", 0);
+        while (!queue.isEmpty()) {
+            Pair<String, Integer> curr = queue.poll();
+            if (curr.getKey().equals(target)) return curr.getValue();
+            StringBuffer sb = new StringBuffer(curr.getKey());
+            for (int i = 0; i < 4; i++) {
+                char origin = sb.charAt(i);
+                char c = lastChar(origin);
+                for (int j = 0; j < 2; j++) {
+                    sb.setCharAt(i, c);
+                    String tmp = sb.toString();
+                    if (!deadMap.containsKey(tmp)) {
+                        queue.offer(new Pair<String, Integer>(tmp, curr.getValue() + 1));
+                        deadMap.put(tmp, 0);
+                    }
+                    c = nextChar(origin);
+                }
+                sb.setCharAt(i, origin);
+            }
+        }
+        return -1;
+
+    }
+
+    public char lastChar(char c) {
+        if (c == '0') {
+            return '9';
+        } else {
+            int tmp = (c - '0') - 1;
+            return Integer.toString(tmp).charAt(0);
+        }
+    }
+
+    public char nextChar(char c) {
+        if (c == '9') {
+            return '0';
+        } else {
+            int tmp = (c - '0') + 1;
+            return Integer.toString(tmp).charAt(0);
+        }
+    }
+}
+
+```
+
+### 773 滑动谜题
+
+方法一：dfs。将数组处理成字符串
+
+时间复杂度：O((mn)!)
+
+空间复杂度：O((mn)!)
+
+```java
+class Solution {
+    HashMap<String, Integer> visited;
+    Queue<Pair<String, Integer>> queue;
+    int[][] end = new int[][]{{1, 2, 3}, {4, 5, 0}};
+    int[] zeroPos = new int[]{0, 0};
+    int[][] urdl = new int[][]{{-1, 0}, {0, 1}, {1, 0}, {0, -1}};
+    public int slidingPuzzle(int[][] board) {
+        visited = new HashMap<>();
+        queue = new LinkedList<>();
+        if (isSatisfied(board, 0)) {
+            return 0;
+        }
+        
+        while (!queue.isEmpty()) {
+            Pair<String, Integer> curr = queue.poll();
+            int[][] currArray = string2Array(curr.getKey());
+            for (int i = 0; i < 4; i++) {
+                int[] o = urdl[i];
+                int[] swapPos = new int[2];
+                swapPos[0] = zeroPos[0] + o[0];
+                swapPos[1] = zeroPos[1] + o[1];
+                if ((swapPos[0] >= 0 && swapPos[0] <= 1) && (swapPos[1] >= 0 && swapPos[1] <= 2)) {
+                    swap(currArray, zeroPos, swapPos);
+                    if (isSatisfied(currArray, curr.getValue() + 1))    return curr.getValue() + 1;
+                    swap(currArray, swapPos, zeroPos);
+                }
+            }
+        }
+        return -1;
+    }
+
+    public boolean isSatisfied(int[][] curr, int depth) {
+        boolean ans = true;
+        StringBuffer sb = new StringBuffer();
+        for (int i = 0; i < 2; i++) {
+            for (int j = 0; j < 3; j++) {
+                int c = curr[i][j];
+                sb.append(c);
+                if (c != end[i][j]) ans = false;
+            }
+        }
+        String s = sb.toString();
+        if (!visited.containsKey(s)) {
+            visited.put(s, depth);
+            queue.offer(new Pair<String, Integer>(s, depth));
+        } 
+        return ans;
+    }
+
+    public int[][] string2Array(String s) {
+        int[][] array = new int[2][3];
+        for (int i = 0; i < 3; i++) {
+            array[0][i] = s.charAt(i) - '0';
+            if (array[0][i] == 0) {
+                zeroPos[0] = 0;
+                zeroPos[1] = i;
+            }
+        }
+        for (int i = 0; i < 3; i++) {
+            array[1][i] = s.charAt(i+3) - '0';
+            if (array[1][i] == 0) {
+                zeroPos[0] = 1;
+                zeroPos[1] = i;
+            }
+        }
+        return array;
+    }
+
+    public void swap(int[][] curr, int[] x, int[] y) {
+        int tmp = curr[x[0]][x[1]];
+        curr[x[0]][x[1]] = curr[y[0]][y[1]];
+        curr[y[0]][y[1]] = tmp;
+    }
+}
+
+```
+
+### 909 蛇梯棋
+
+方法一：bfs
+
+时间复杂度：O(N^2)
+
+空间复杂度：O(N^2)
+
+```java
+class Solution {
+    int m, n;
+    public int snakesAndLadders(int[][] board) {
+        m = board.length;
+        n = board[0].length;
+        int index = 1;
+        int[][] visited = new int[m][n];
+        Queue<Pair<Integer, Integer>> queue = new LinkedList<>();
+        queue.offer(new Pair<Integer, Integer>(1, 0));
+        int[] pos = index2Pos(1);
+        visited[pos[0]][pos[1]] = 1;
+
+        while (!queue.isEmpty()) {
+            Pair<Integer, Integer> currPair = queue.poll();
+            int curr = currPair.getKey();
+            if (curr == m*n) return currPair.getValue();
+            pos = index2Pos(curr);
+            for (int i = 1; i <= 6; i++) {
+                int next = curr + i;
+                if (next <= m * n) {
+                    pos = index2Pos(next);
+                    int x = pos[0];
+                    int y = pos[1];
+                    if (visited[x][y] != 1) {
+                        if (board[x][y] == -1) {
+                            visited[x][y] = 1;
+                            queue.offer(new Pair<Integer, Integer>(next, currPair.getValue()+1));
+                        } else {
+                            visited[x][y] = 1;
+                            pos = index2Pos(board[x][y]);
+                            if (visited[pos[0]][pos[1]] == 0) {
+                                visited[pos[0]][pos[1]] = 2;
+                                queue.offer(new Pair<Integer, Integer>(board[x][y], currPair.getValue()+1));
+                            }
+
+                        }
+                    }
+                }
+            }
+        }
+        return -1;
+    }
+
+    public int[] index2Pos(int index) {
+        int a = index / (2*n);
+        int b = index % (2*n);
+        int x, y;
+        if (b == 0) {
+            y = 0;
+            x = m - 2;
+            a--;
+        } else if (b <= n && b >= 1) {
+            y = b - 1;
+            x = m - 1;
+        } else {
+            y = 2*n - b;
+            x = m - 2; 
+        }
+        x = x - 2*a;
+        int[] pos = new int[2];
+        pos[0] = x;
+        pos[1] = y;
+        return pos;
+    }
+}
+
+```
+
+### 815 公交路线
+
+方法一：bfs，需要建图，利用hashMap建图
+
+时间复杂度：O(mn)
+
+空间复杂度：O(mn)
+
+```java
+class Solution {
+    HashMap<Integer, List<Integer>> map;
+    HashMap<Integer, Integer> visitedRoute;
+    HashMap<Integer, Integer> visitedStop;
+    Queue<Pair<Integer, Integer>> queue;
+    public int numBusesToDestination(int[][] routes, int source, int target) {
+        map = new HashMap<>();
+        int l = routes.length;
+        visitedRoute = new HashMap<>();
+        visitedStop = new HashMap<>();
+        queue = new LinkedList<>();
+        for (int i = 0; i < l; i++) {
+            for (int j = 0; j < routes[i].length; j++) {
+                if (!map.containsKey(routes[i][j])) {
+                    List<Integer> tmp = new LinkedList<>();
+                    tmp.add(i);
+                    map.put(routes[i][j], tmp);
+                } else {
+                    List<Integer> tmp = map.get(routes[i][j]);
+                    tmp.add(i);
+                }
+            }
+        }
+
+        List<Integer> curr = map.get(source);
+        for (int i = 0; i < curr.size(); i++) {
+            int route = curr.get(i);
+            visitedRoute.put(route, 0);
+            for (int j = 0; j < routes[route]; j++) {
+                if (!visitedStop.containsKey(routes[route][j])) {
+                    queue.offer(new Pair<Integer, Integer>(routes[route][j], 1));
+                    visitedStop.put(routes[route][j], 0);
+                    if (target == routes[route][j]) return 1;
+                }
+            }
+        }
+
+        while (!queue.isEmpty()) {
+            Pair<Integer, Integer> tmp = queue.poll();
+            int currStop = tmp.getKey();
+            curr = map.get(currStop);
+            for (int i = 0; i < curr.size(); i++) {
+                int route = curr.get(i);
+                if (visitedRoute.containsKey(route)) continue;
+                visitedRoute.put(route, 0);
+                for (int j = 0; j < routes[route]; j++) {
+                    if (!visitedStop.containsKey(routes[route][j])) {
+                        queue.offer(new Pair<Integer, Integer>(routes[route][j], tmp.getValue()+1));
+                        visitedStop.put(routes[route][j], 0);
+                        if (target == routes[route][j]) return tmp.getValue()+1;
+                    }
+                }
+            }
+
+        }
+
+        return -1;
+
     }
 }
 
